Make columned listed charts a fixed height to stop weird positioning bug

--- a/www-src/app/views/overview/correlated.html
+++ b/www-src/app/views/overview/correlated.html
@@ -1,4 +1,4 @@
-<div class="col-md-4" ng-repeat="chart in chartsCorrelated" id="{{chart.info.id}}" ng-if="hasCorrelatedCharts() > 0">
+<div class="col-md-4 overviewitem" ng-repeat="chart in chartsCorrelated" id="{{chart.info.id}}" ng-if="hasCorrelatedCharts() > 0">
 	<a class="correlated" href="/{{chart.info.url}}">
 		{{chart.title}}
 		<span ng-include="'views/charts/correlated/line.html'"></span>
