--- a/www-src/app/styles/charts.less
+++ b/www-src/app/styles/charts.less
@@ -22,6 +22,10 @@
 		margin-top: 20px;
 	}
 
+	.overviewitem {
+		height: 250px;
+	}
+
 	a.related, a.correlated {
 		min-width: 350px;
 		min-height: 200px;
