--- a/www-src/app/views/search.html
+++ b/www-src/app/views/search.html
@@ -56,8 +56,8 @@
 				<h4>Tweets</h4>
 				<div class="row tweets" ng-repeat="tweet in tweets | limitTo: 10">
 					<p class="tweet-header">
-						<i class="fa fa-twitter twitter-blue"></i>
-						<span><span class="tweet-author">{{tweet.name}}</span> (<a ng-href="https://twitter.com/{{tweet.username}}">@{{tweet.username}}</a>)</span>
+						<a ng-href="{{tweet.url}}" class="no-underline" target="_blank"><i class="fa fa-twitter twitter-blue"></i></a>
+						<span><span class="tweet-author">{{tweet.name}}</span> (<a ng-href="https://twitter.com/{{tweet.username}}">@{{tweet.username}}</a>) <a ng-href="{{tweet.url}}" class="pull-right" target="_blank"><small><i class="fa fa-external-link"></i> View on Twitter</small></a></span>
 						<div class="tweet-text" ng-bind-html="tweet.comment"></div>
 					</p>
 				</div>
