--- a/www-src/app/styles/sidebar.less
+++ b/www-src/app/styles/sidebar.less
@@ -86,6 +86,10 @@
 				margin-bottom: 2px;
 			}
 
+			.avatar {
+				border-radius: 3px;
+			}
+
 			.votes {
 				text-align: center;
 				max-width: 32px;
