--- a/www-src/app/views/charts/observations.html
+++ b/www-src/app/views/charts/observations.html
@@ -11,7 +11,7 @@
 		</div>
 		<div class="row">
 			<span class="left pull-left">
-				<img class="media-object" ng-src="{{obsv.user.avatar}}">
+				<img class="avatar media-object" ng-src="{{obsv.user.avatar}}">
 				<div class="votes" ng-if="obsv.user.username != username">
 					<i class="glyphicon glyphicon-arrow-up text-danger" ng-if="obsv.action == 'credited'"></i>
 					<i class="glyphicon glyphicon-arrow-up" ng-click="creditObservation(obsv, true)" ng-if="obsv.action == ''"></i>
