--- a/www-src/app/views/search.html
+++ b/www-src/app/views/search.html
@@ -68,7 +68,7 @@
 		</div>
 	</div>
 
-	<div class="col-sm-3 col-xs-0">
+	<div class="col-sm-3 hidden-xs hidden-sm">
 		<div class="sidebar">
 			<div class="title">Overview</div>
 
