Improve sizing and positioning on 'small' devices (e.g. tablets)

--- a/www-src/app/views/charts.html
+++ b/www-src/app/views/charts.html
@@ -20,7 +20,7 @@
 	</div>
 
 	<div class="row">
-		<div class="col-xs-12 col-md-6 constrict-graphs">
+		<div class="col-xs-12 col-sm-8 col-md-6 constrict-graphs">
 			<div class="action-bar">
 				<a href="/overview/{{params.id}}" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-share-alt glyphicon-flip"></span> Go Back</a>
 			</div>
@@ -42,7 +42,7 @@
 			</div>
 		</div>
 
-		<div class="col-xs-12 col-md-3 info" ng-include="'views/charts/info.html'"></div>
+		<div class="col-xs-12 col-sm-4 col-md-3 info" ng-include="'views/charts/info.html'"></div>
 
 		<div class="col-md-3 hidden-xs hidden-sm">
 			<div class="observations sidebar" ng-include="'views/charts/observations.html'"></div>
