--- a/www-src/app/views/overviewscreen.html
+++ b/www-src/app/views/overviewscreen.html
@@ -1,5 +1,5 @@
 <div class="row" ng-init="init()">
-	<div class="col-xs-12 col-sm-9">
+	<div class="col-xs-12 col-md-9">
 		<div class="row overviewscreen">
 			<div class="col-xs-12 col-sm-4 section" ng-repeat="sect in mainSections | limitTo: 3">
 				<h4 class="text-center">{{sect.title}}</h4>
@@ -88,7 +88,7 @@
 		<div class="tooltip-inner"></div>
 	</div>
 
-	<div class="col-sm-3 hidden-xs">
+	<div class="col-md-3 hidden-xs hidden-sm">
 		<div class="sidebar">
 			<div class="title">Overview</div>
 
