--- a/www-src/app/views/search.html
+++ b/www-src/app/views/search.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="row searchpage">
-	<div class="col-sm-9 col-xs-12">
+	<div class="col-xs-12 col-md-9">
 		<div class="row">
 			<!-- <form novalidate>
 				<div class="form-group">
