--- a/www-src/app/views/charts.html
+++ b/www-src/app/views/charts.html
@@ -5,7 +5,7 @@
 		<div class="col-xs-12 col-md-9">
 			<ul class="breadcrumb">
 				<li><a href="/home">Home</a></li>
-				<li><a href="/overview/{{params.id}}">{{params.id}}</a></li>
+				<li ng-if="params.id && info.source.prim"><a href="/overview/{{params.id}}">Overview of {{info.source.prim}}</a></li>
 			</ul>
 		</div>
 	</div>
@@ -22,7 +22,7 @@
 	<div class="row">
 		<div class="col-xs-12 col-sm-8 col-md-6 constrict-graphs">
 			<div class="action-bar">
-				<a href="/overview/{{params.id}}" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-share-alt glyphicon-flip"></span> Go Back</a>
+				<a href="javascript:history.back()" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-share-alt glyphicon-flip"></span> Go Back</a>
 			</div>
 
 			<div>{{chart.title}}</div>
