--- a/www-src/app/views/home.html
+++ b/www-src/app/views/home.html
@@ -26,6 +26,10 @@
 									<a href="{{chart.info.url}}" ng-if="chart.info">{{chart.info.title[0]}} and {{chart.info.title[1]}}</a>
 								</h5>
 							</div>
+							<span class="chtlabel chtlabel-x" ng-if="chart.labels.x">{{chart.labels.x}}</span>
+							<span class="chtlabel chtlabel-y" ng-if="chart.labels.y">{{chart.labels.y}}</span>
+							<span class="chtlabel chtlabel-y1" ng-if="chart.labels.y1">{{chart.labels.y1}}</span>
+							<span class="chtlabel chtlabel-y2" ng-if="chart.labels.y2">{{chart.labels.y2}}</span>
 							<a class="related media-body" ng-if="!chart.info" href="{{chart.url}}">
 								<span ng-include="'views/charts/related/line.html'"></span>
 								<span ng-include="'views/charts/related/row.html'"></span>
