--- a/www-src/app/views/landing.html
+++ b/www-src/app/views/landing.html
@@ -51,6 +51,10 @@
 		</div>
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-3" ng-repeat="chart in chartsRelated | limitTo: 4">
+				<span class="chtlabel chtlabel-x" ng-if="chart.labels.x">{{chart.labels.x}}</span>
+				<span class="chtlabel chtlabel-y" ng-if="chart.labels.y">{{chart.labels.y}}</span>
+				<span class="chtlabel chtlabel-y1" ng-if="chart.labels.y1">{{chart.labels.y1}}</span>
+				<span class="chtlabel chtlabel-y2" ng-if="chart.labels.y2">{{chart.labels.y2}}</span>
 				<div ng-if="!chart.info">
 					<div class="chart-title">{{chart.title}}</div>
 					<span ng-include="'views/charts/related/line.html'"></span>
