--- a/www-src/app/views/overview/related.html
+++ b/www-src/app/views/overview/related.html
@@ -1,4 +1,8 @@
 <div class="col-sm-6 col-md-4 overviewitem" ng-repeat="chart in chartsRelated" id="{{chart.id}}" ng-if="hasRelatedCharts() > 0">
+	<span class="chtlabel chtlabel-x" ng-if="chart.labels.x">{{chart.labels.x}}</span>
+	<span class="chtlabel chtlabel-y" ng-if="chart.labels.y">{{chart.labels.y}}</span>
+	<span class="chtlabel chtlabel-y1" ng-if="chart.labels.y1">{{chart.labels.y1}}</span>
+	<span class="chtlabel chtlabel-y2" ng-if="chart.labels.y2">{{chart.labels.y2}}</span>
 	<a class="related" href="/{{chart.url}}">
 		{{chart.title}}
 		<span ng-include="'views/charts/related/line.html'"></span>
