--- a/www-src/app/views/search.html
+++ b/www-src/app/views/search.html
@@ -26,6 +26,10 @@
 						<div class="media-heading">
 							<h5><a href="/overview/{{chart.guid}}">{{chart.title}}</a></h5>
 						</div>
+						<span class="chtlabel chtlabel-x" ng-if="chart.labels.x && !chart.loading">{{chart.labels.x}}</span>
+						<span class="chtlabel chtlabel-y" ng-if="chart.labels.y && !chart.loading">{{chart.labels.y}}</span>
+						<span class="chtlabel chtlabel-y1" ng-if="chart.labels.y1 && !chart.loading">{{chart.labels.y1}}</span>
+						<span class="chtlabel chtlabel-y2" ng-if="chart.labels.y2 && !chart.loading">{{chart.labels.y2}}</span>
 						<a class="related media-body" href="/overview/{{chart.guid}}" ng-if="!chart.loading">
 							<span ng-include="'views/charts/related/line.html'"></span>
 							<span ng-include="'views/charts/related/row.html'"></span>
