Disable pointer events on mini-graphs on political overview screen

--- a/www-src/app/styles/overviewscreen.less
+++ b/www-src/app/styles/overviewscreen.less
@@ -47,6 +47,10 @@
 			vertical-align: middle;
 			border-top: 1px solid rgba(0, 0, 0, 0.15);
 
+			.chartSwitch {
+				pointer-events: none;
+			}
+
 			.label-container {
 				padding-left: 0;
 
