Replace 'Credit' with 'Approve'

--- a/www-src/app/views/charts.html
+++ b/www-src/app/views/charts.html
@@ -67,8 +67,8 @@
 	</div>
 </div>
 
-<div class="hoverfade-msg" ng-class="{true: 'show', false: ''}[creditMsg != null]" id="credit-message">
+<div class="hoverfade-msg" ng-class="{true: 'show', false: ''}[approveMsg != null]" id="approve-message">
 	<i class="glyphicon glyphicon-flag purple-flag"></i>
-	<p ng-show="creditMsg == true">You credited this!</p>
-	<p ng-show="creditMsg == false">You discredited this!</p>
+	<p ng-show="approveMsg == true">You approved this!</p>
+	<p ng-show="approveMsg == false">You disapproved this!</p>
 </div>
