--- a/www-src/app/views/charts/observations.html
+++ b/www-src/app/views/charts/observations.html
@@ -13,11 +13,11 @@
 			<span class="left pull-left">
 				<img class="avatar media-object" ng-src="{{obsv.user.avatar}}">
 				<div class="votes" ng-if="obsv.user.username != username">
-					<i class="glyphicon glyphicon-arrow-up text-danger" ng-if="obsv.action == 'credited'"></i>
-					<i class="glyphicon glyphicon-arrow-up" ng-click="creditObservation(obsv, true)" ng-if="obsv.action == ''"></i>
-					<span>{{obsv.creditCount}}</span>
-					<i class="glyphicon glyphicon-arrow-down text-danger" ng-if="obsv.action == 'discredited'"></i>
-					<i class="glyphicon glyphicon-arrow-down" ng-click="creditObservation(obsv, false)" ng-if="obsv.action == ''"></i>
+					<i class="glyphicon glyphicon-arrow-up text-danger" ng-if="obsv.action == 'approved'"></i>
+					<i class="glyphicon glyphicon-arrow-up" ng-click="approveObservation(obsv, true)" ng-if="obsv.action == ''"></i>
+					<span>{{obsv.approvalCount}}</span>
+					<i class="glyphicon glyphicon-arrow-down text-danger" ng-if="obsv.action == 'disapproved'"></i>
+					<i class="glyphicon glyphicon-arrow-down" ng-click="approveObservation(obsv, false)" ng-if="obsv.action == ''"></i>
 				</div>
 			</span>
 
