--- a/www-src/app/views/user/profile.html
+++ b/www-src/app/views/user/profile.html
@@ -17,9 +17,9 @@
 		<li ng-class="{true: 'active', false: ''}[currentTab == 'profile']" ng-if="!params.user">
 			<a data-toggle="tab" href="/user/profile">Personal Details</a>
 		</li>
-		<li ng-class="{true: 'active', false: ''}[currentTab == 'creditdiscoveries']">
-			<a data-toggle="tab" href="/user/creditdiscoveries" ng-if="!params.user">Credited Discoveries</a>
-			<a data-toggle="tab" href="/profile/{{params.user}}/creditdiscoveries" ng-if="params.user">Credited Discoveries</a>
+		<li ng-class="{true: 'active', false: ''}[currentTab == 'approveddiscoveries']">
+			<a data-toggle="tab" href="/user/approveddiscoveries" ng-if="!params.user">Approved Discoveries</a>
+			<a data-toggle="tab" href="/profile/{{params.user}}/approveddiscoveries" ng-if="params.user">Approved Discoveries</a>
 		</li>
 		<li ng-class="{true: 'active', false: ''}[currentTab == 'discoveries']">
 			<a data-toggle="tab" href="/user/discoveries" ng-if="!params.user">Discoveries</a>
@@ -69,24 +69,24 @@
 			</div>
 		</div>
 
-		<div ng-class="{true: 'tab-pane fade active in', false: 'tab-pane fade'}[currentTab == 'creditdiscoveries']" id="creditdiscoveries">
+		<div ng-class="{true: 'tab-pane fade active in', false: 'tab-pane fade'}[currentTab == 'approveddiscoveries']" id="approveddiscoveries">
 			<div class="row">
 				<div class="col-xs-12 col-md-10 col-md-offset-1">
 					<div class="row">
 						<div class="col-xs-12">
-							<p class="text-center"><span ng-if="isLoggedInUser">My </span><span ng-if="!isLoggedInUser && current.username">{{current.username}}'s </span>Credited Discoveries</p>
+							<p class="text-center"><span ng-if="isLoggedInUser">My </span><span ng-if="!isLoggedInUser && current.username">{{current.username}}'s </span>Approved Discoveries</p>
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0" ng-repeat="disc in creditDiscoveries">
+						<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0" ng-repeat="disc in approvedDiscoveries">
 							<div class="circular-icon"><i class="glyphicon glyphicon-flag"></i></div>
 							<p class="profile-li">
 								<a href="/{{disc.apistring}}">{{disc.title}}</a>
 							</p>
 						</div>
 					</div>
-					<div ng-if="!loading.creditDiscoveries && creditDiscoveries.length < 1">Nothing to show</div>
-					<div ng-if="loading.creditDiscoveries" class="loader-tight loader-faded" ng-include="'views/loader.html'"></div>
+					<div ng-if="!loading.approveddiscoveries && approvedDiscoveries.length < 1">Nothing to show</div>
+					<div ng-if="loading.approveddiscoveries" class="loader-tight loader-faded" ng-include="'views/loader.html'"></div>
 				</div>
 			</div>
 		</div>
