--- a/www-src/app/views/overview/related.html
+++ b/www-src/app/views/overview/related.html
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="col-md-12"><h4>Correlated within <a href="/overview/{{params.id}}">{{info.title}}</a></h4></div>
+	<div class="col-md-12"><h4>Correlation within <a href="/overview/{{params.id}}">{{info.title}}</a></h4></div>
 </div>
 
 <div class="row">
