Give avatars a constant height to avoid extra movement once they've loaded

--- a/www-src/app/styles/sidebar.less
+++ b/www-src/app/styles/sidebar.less
@@ -81,12 +81,10 @@
 			color: #C6C6C6;
 
 
-			img.media-object {
+			img.avatar {
 				width: 32px;
+				height: 32px;
 				margin-bottom: 2px;
-			}
-
-			.avatar {
 				border-radius: 3px;
 			}
 
