--- a/www-src/app/views/user/login.html
+++ b/www-src/app/views/user/login.html
@@ -44,7 +44,7 @@
 			</div>
 
 			<div class="form-group" ng-class="{'has-error': registerForm.username.$invalid && !registerForm.username.$pristine}">
-				<input class="form-control" name="username" type="text" placeholder="Username" ng-required="true" ng-model="user.register.username" autocomplete="off" ng-pattern="/^([A-Za-z0-9]{3,})$/" />
+				<input class="form-control" name="username" type="text" placeholder="Username" ng-required="true" ng-model="user.register.username" autocomplete="off" ng-pattern="/^([A-Za-z0-9]{3,20})$/" />
 				<p ng-show="registerForm.username.$error.required && !registerForm.username.$pristine" class="help-block">Required</p>
 				<p ng-show="registerForm.username.$error.pattern && !registerForm.username.$pristine" class="help-block">Not a valid username!</p>
 			</div>
