Rename Overview Screen to 'Activity Monitor'

--- a/www-src/app/views/header.html
+++ b/www-src/app/views/header.html
@@ -13,7 +13,7 @@
 	<div class="navbar-collapse collapse" ng-if="Auth.isAuthenticated()">
 		<ul class="nav navbar-nav">
 			<li ng-class="{active: isActive('/search')}"><a href="/search">Search</a></li>
-			<li ng-class="{active: isActive('/overview')}"><a href="/overview">Overview</a></li>
+			<li ng-class="{active: isActive('/activitymonitor')}"><a href="/activitymonitor">Activity Monitor</a></li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
 			<li ng-class="{active: isActive('/admin')}" ng-if="Auth.isAdmin()"><a href="/admin">Admin</a></li>
