Change contents of activity monitor sidebar

--- a/www-src/app/styles/overviewscreen.less
+++ b/www-src/app/styles/overviewscreen.less
@@ -6,21 +6,16 @@
 	display: inline-block;
 	width: 5em;
 
-	&.label-severe-1 {
-		background-color: #bb423c;
-	}
-	&.label-severe-2 {
-		background-color: #c65d41;
-	}
-	&.label-severe-3 {
-		background-color: #d27845;
-	}
-	&.label-severe-4 {
-		background-color: #dd9349;
-	}
-	&.label-severe-5 {
-		background-color: #e8ae4d;
-	}
+	&.label-severe-1 { background-color: #bb403c; }
+	&.label-severe-2 { background-color: #c14f3e; }
+	&.label-severe-3 { background-color: #c75e41; }
+	&.label-severe-4 { background-color: #cd6d43; }
+	&.label-severe-5 { background-color: #d37c45; }
+	&.label-severe-6 { background-color: #da8b47; }
+	&.label-severe-7 { background-color: #e09a4a; }
+	&.label-severe-8 { background-color: #e6a94c; }
+	&.label-severe-9 { background-color: #ecb74e; }
+	&.label-severe-10 { background-color: #f3c650; }
 }
 
 .overviewscreen {
