--- a/www-src/app/views/overviewscreen.html
+++ b/www-src/app/views/overviewscreen.html
@@ -95,7 +95,7 @@
 			<div class="content">
 				<div class="media" ng-repeat="sect in sidebarSections">
 					<h5 class="list-header">{{sect.category}}</h5>
-					<div class="row" ng-repeat="(key, item) in sect.top5">
+					<div class="row" ng-repeat="(key, item) in sect.top">
 						<p class="item" ng-show="item.amount > 0">
 							<a href="/{{sect.url}}/{{item.term}}">
 								<span ng-class="labelClass(key)">{{item.amount}}</span>&nbsp;&nbsp;
@@ -103,7 +103,7 @@
 							</a>
 						</p>
 					</div>
-					<div class="nothing" ng-hide="sect.top5.length > 0"><p class="text-center text-muted">Nothing to show</p></div>
+					<div class="nothing" ng-hide="sect.top.length > 0"><p class="text-center text-muted">Nothing to show</p></div>
 				</div>
 
 				<div class="nothing" ng-hide="sidebarSections.length > 0"><p class="text-center text-muted">Nothing to show</p></div>
