--- a/www-src/app/views/charts/observations.html
+++ b/www-src/app/views/charts/observations.html
@@ -1,7 +1,7 @@
 <div class="title">Observations</div>
 
 <div class="content" ng-show="userObservations.length > 0">
-	<div class="media" ng-repeat="obsv in userObservations" id="observation_{{obsv.xy}}">
+	<div ng-class="{true: 'media observation highlight', false: 'media observation'}[obsv.highlight]" ng-repeat="obsv in userObservations" id="observation_{{obsv.xy}}">
 		<div class="row">
 			<span class="text-muted"><small>{{obsv.date}}</small></span>
 			<span class="flag">
