Fixed Correlated Charts with new data. Pie & Line for new Data on Related.

--- a/www-src/app/views/admin/dashboard.html
+++ b/www-src/app/views/admin/dashboard.html
@@ -5,14 +5,15 @@
 			<div class="jumbotron text-center">
 				<h1><i class="fa fa-users"></i></h1>
 				<p class="desc">View, edit or disable any user.</p>
-				<p><a class="btn btn-primary btn-lg" href="/admin/users">Admin Users</a></p>
+				<p><a class="btn btn-primary btn-lg" href="/admin/users">Manage Users</a></p>
 			</div>
 		</div>
+
 		<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0">
 			<div class="jumbotron text-center">
 				<h1><i class="glyphicon glyphicon-comment"></i></h1>
 				<p class="desc">Moderate flagged comments, or review all observations.</p>
-				<p><a class="btn btn-primary btn-lg" href="/admin/observations">Admin Observations</a></p>
+				<p><a class="btn btn-primary btn-lg" href="/admin/observations">Manage Observations</a></p>
 			</div>
 		</div>
 	</div>
