--- a/www-src/app/views/overview.html
+++ b/www-src/app/views/overview.html
@@ -5,7 +5,7 @@
 	<hr/>
 
 	<!-- Correlated -->
-	<div class="row correlated" ng-controller="OverviewCorrelatedCtrl" ng-init="getCorrelatedCharts()" ng-include="'views/overview/correlated.html'"></div>
+	<!-- <div class="row correlated" ng-controller="OverviewCorrelatedCtrl" ng-init="getCorrelatedCharts()" ng-include="'views/overview/correlated.html'"></div> -->
 </div>
 
 <!-- Smart Caching [allows to pre-load views] -->
