Fix search page

--- a/www-src/app/views/search.html
+++ b/www-src/app/views/search.html
@@ -11,7 +11,7 @@
 				</div>
 			</form> -->
 
-			<form class="form-search" ng-submit="search()" novalidate>
+			<form class="form-search" ng-submit="changePage()" novalidate>
 				<div class="input-group">
 					<input class="form-control" type="search" placeholder="Enter your query here (e.g. gold)" ng-model="query" />
 					<span class="input-group-btn">
