Improve segment/region highlighting on activity monitor page

--- a/www-src/app/styles/overviewscreen.less
+++ b/www-src/app/styles/overviewscreen.less
@@ -41,6 +41,17 @@
 			margin: 0;
 			vertical-align: middle;
 			border-top: 1px solid rgba(0, 0, 0, 0.15);
+			cursor: default;
+
+			&:hover {
+				.label {
+					background-color: #3498db !important;
+				}
+			}
+
+			.li-term {
+				color: black;
+			}
 
 			.chartSwitch {
 				pointer-events: none;
