--- a/www-src/app/views/overviewscreen.html
+++ b/www-src/app/views/overviewscreen.html
@@ -39,21 +39,19 @@
 						<div class="col-xs-4"><small><strong>{{sect.colNameB}}</strong></small></div>
 					</div>
 
-					<div class="row li" ng-repeat="item in sect.items">
+					<div class="row li" ng-repeat="item in sect.items" ng-mouseover="highlight(true, sect.type, item)" ng-mouseleave="highlight(false, sect.type, item)">
 						<div class="col-xs-8 label-container">
 							<a class="label label-default"
 								ng-if="sect.type == 'pie'"
 								ng-attr-id="legend-{{item.id}}"
 								ng-style="{'background-color': colourMap[item.id]}"
-								ng-mouseover="highlightPieSlice(item.id, true)"
-								ng-mouseleave="highlightPieSlice(item.id, false)"
 
 								data-toggle="tooltip"
 								data-placement="bottom"
 								data-html="true"
 							>&nbsp;</a>
-							<a class="label label-default" ng-style="{'background-color': item.color}" ng-mouseover="mapGen.highlight(item.corresponds)" ng-mouseleave="mapGen.unhighlight(item.corresponds)" ng-if="sect.type == 'map'">&nbsp;</a>
-							<small><strong>{{item.term}}</strong></small>
+							<a class="label label-default" ng-style="{'background-color': item.color}" ng-if="sect.type == 'map'">&nbsp;</a>
+							<small><strong><a class="li-term" ng-href="/search/{{item.term}}">{{item.term}}</a></strong></small>
 						</div>
 						<div class="col-xs-4">
 							<span>
