--- a/www-src/app/views/search.html
+++ b/www-src/app/views/search.html
@@ -49,7 +49,7 @@
 					<p class="text-center">Sorry we are unable to find any search results for given keyword(s).</p>
 				</div>
 
-				<div class="row show-more" ng-click="showMore()" ng-if="!loading.related && results.length > 0 && hasRelatedCharts() > 0 && isSearch">
+				<div class="row show-more" ng-click="showMore()" ng-if="!loading.related && results.length > 0 && hasRelatedCharts() > 0 && isSearch && chartsRelated.length < total">
 					<button class="col-md-6 col-md-offset-3 btn btn-default text-center">Show More</button>
 				</div>
 
