Using CSS classes for highlighting pie slices/map regions on activity monitor, opposed to explicitly setting attrs

--- a/www-src/app/styles/overviewscreen.less
+++ b/www-src/app/styles/overviewscreen.less
@@ -80,6 +80,10 @@
 			text-align: center;
 		}
 
+		.highlight {
+			fill: #3498db !important;
+		}
+
 		.dc-chart {
 			.axis {
 				display: none;
