--- a/www-src/app/styles/activitymonitor.less
+++ b/www-src/app/styles/activitymonitor.less
@@ -18,7 +18,7 @@
 	&.label-severe-10 { background-color: #f3c650; }
 }
 
-.overviewscreen {
+.activitymonitor {
 	padding: 30px 0 0 0;
 
 	.section {
@@ -124,7 +124,7 @@
 }
 
 @media all and (max-width: 992px) {
-	.overviewscreen {
+	.activitymonitor {
 		padding: 0;
 
 		.section {
