--- a/www-src/app/views/activitymonitor.html
+++ b/www-src/app/views/activitymonitor.html
@@ -1,6 +1,6 @@
 <div class="row" ng-init="init()">
 	<div class="col-xs-12 col-md-9">
-		<div class="row overviewscreen">
+		<div class="row activitymonitor">
 			<div class="col-xs-12 col-sm-4 section" ng-repeat="sect in mainSections | orderObjectBy: 'order' | limitTo: 3">
 				<h4 class="text-center">{{sect.title}}</h4>
 
