--- a/www-src/app/styles/activitymonitor.less
+++ b/www-src/app/styles/activitymonitor.less
@@ -61,7 +61,9 @@
 				padding-left: 0;
 
 				.label {
+					display: inline-block;
 					margin-right: 5px;
+					min-width: 3em;
 				}
 			}
 		}
