--- a/www-src/app/views/activitymonitor.html
+++ b/www-src/app/views/activitymonitor.html
@@ -49,8 +49,9 @@
 								data-toggle="tooltip"
 								data-placement="bottom"
 								data-html="true"
-							>&nbsp;</a>
-							<a class="label label-default" ng-style="{'background-color': item.color}" ng-if="sect.type == 'map'">&nbsp;</a>
+								ng-attr-title="{{sect.valDesc}}"
+							>{{item.val}}</a>
+							<a class="label label-default" ng-style="{'background-color': item.color}" ng-if="sect.type == 'map'" ng-attr-title="{{sect.valDesc}}">{{item.val}}</a>
 							<small><strong><a class="li-term" ng-href="/search/{{item.term}}">{{item.term}}</a></strong></small>
 						</div>
 						<div class="col-xs-4">
