Improve appearance of search icon on home page

--- a/www-src/app/styles/home.less
+++ b/www-src/app/styles/home.less
@@ -3,6 +3,19 @@
 		margin: 20px auto;
 	}
 
+	.search-icon {
+		.fa-search {
+			font-size: 0.8em;
+			font-size: .8em;
+			margin-top: 4px;
+			vertical-align: top;
+			font-weight: bold;
+		}
+		.fa-chevron-right {
+			font-size: 0.9em;
+		}
+	}
+
 	#approve {
 		min-height: 325px;
 		margin-bottom: 15px;
