--- a/www-src/app/views/home.html
+++ b/www-src/app/views/home.html
@@ -1,7 +1,7 @@
 <div id="homepage" ng-init="init()">
 	<div class="row" id="search">
 		<div class="col-xs-12 col-xs-offset-0 col-md-8 col-md-offset-2">
-			<h3><small><i class="fa fa-search"></i><i class="fa fa-chevron-right"></i></small> Begin exploring now</h3>
+			<h3><span class="search-icon"><i class="fa fa-search"></i><i class="fa fa-chevron-right"></i></span> Begin exploring now</h3>
 			<form ng-submit="search()">
 				<div class="input-group">
 					<input class="form-control" ng-model="searchquery" />
