Only enforce purple-flag size on home page

--- a/www-src/app/styles/home.less
+++ b/www-src/app/styles/home.less
@@ -1,4 +1,9 @@
 #homepage {
+	.purple-flag {
+		width: 28px;
+		height: 28px;
+	}
+
 	.spinner {
 		margin: 20px auto;
 	}
@@ -93,6 +98,4 @@
 	color: white;
 	padding: 6px;
 	top: -2px;
-	width: 28px;
-	height: 28px;
 }
