Stop graphs overflowing cells on search page

--- a/www-src/app/views/search.html
+++ b/www-src/app/views/search.html
@@ -22,7 +22,7 @@
 
 			<div class="list-group search-results">
 				<div class="row">
-					<div class="list-group-item col-sm-4" ng-repeat="chart in chartsRelated" id="{{chart.id}}">
+					<div class="list-group-item col-xs-12 col-sm-6 col-md-4 text-center" ng-repeat="chart in chartsRelated" id="{{chart.id}}">
 						<div class="media-heading">
 							<h5><a href="/overview/{{chart.guid}}">{{chart.title}}</a></h5>
 						</div>
