--- a/www-src/app/views/home.html
+++ b/www-src/app/views/home.html
@@ -19,7 +19,7 @@
 			<div class="row">
 				<div class="col-xs-12" ng-if="chartsRelated && chartsRelated.length > 0">
 					<div class="row">
-						<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-3" ng-repeat="chart in chartsRelated | limitTo:4" id="{{chart.id}}" ng-show="hasRelatedCharts() > 0">
+						<div class="col-xs-12 col-sm-6 col-md-3 text-center" ng-repeat="chart in chartsRelated | limitTo:4" id="{{chart.id}}" ng-show="hasRelatedCharts() > 0">
 							<div class="media-heading">
 								<h5>
 									<a href="{{chart.url}}" ng-if="!chart.info">{{chart.title}}</a>
