--- a/www-src/app/views/landing.html
+++ b/www-src/app/views/landing.html
@@ -50,7 +50,7 @@
 			<div class="col-xs-12"><h4>Top Rated Charts</h4></div>
 		</div>
 		<div class="row">
-			<div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-3" ng-repeat="chart in chartsRelated | limitTo: 4">
+			<div class="col-xs-12 col-sm-6 col-md-3 text-center" ng-repeat="chart in chartsRelated | limitTo: 4">
 				<span class="chtlabel chtlabel-x" ng-if="chart.labels.x">{{chart.labels.x}}</span>
 				<span class="chtlabel chtlabel-y" ng-if="chart.labels.y">{{chart.labels.y}}</span>
 				<span class="chtlabel chtlabel-y1" ng-if="chart.labels.y1">{{chart.labels.y1}}</span>
