--- a/www-src/app/views/overview/related.html
+++ b/www-src/app/views/overview/related.html
@@ -22,15 +22,15 @@
 		</div>
 	</div>
 
-	<div class="col-md-12" ng-if="loading.related" ng-include="'views/loader.html'"></div>
+	<div class="col-xs-12" ng-if="loading.related" ng-include="'views/loader.html'"></div>
 
-	<div class="col-md-12" ng-if="!loading.related && hasRelatedCharts() <= 0">
+	<div class="col-xs-12" ng-if="!loading.related && hasRelatedCharts() <= 0">
 		<div class="jumbotron">
 			<p class="text-center">Sorry we are unable to generate any Related data for given set.</p>
 		</div>
 	</div>
 
-	<div class="col-md-12">
+	<div class="col-xs-12">
 		<a id="getRelated" href="#" class="btn btn-default btn-block" ng-click="getRelated()" ng-hide="limit.related || loading.related || hasRelatedCharts() <= 0">Show more ({{max.related - offset.related}}) <span class="caret"></span></a>
 	</div>
 </div>
