Small adjustment to source links

--- a/www-src/app/views/overview.html
+++ b/www-src/app/views/overview.html
@@ -4,7 +4,7 @@
 		<div class="col-xs-12">
 			<h2>{{info.title}}</h2>
 			<p>{{info.desc}}</p>
-			<p class="text-muted"><small>Data sourced from <a ng-href="{{info.sourceurl}}">{{info.sourcename}}</a></small></p>
+			<p class="text-muted"><small>Data sourced from <a ng-href="{{info.sourceurl}}" target="_blank">{{info.sourcename}} <i class="fa fa-external-link"></i></a></small></p>
 		</div>
 	</div>
 
