--- a/www-src/app/views/overview.html
+++ b/www-src/app/views/overview.html
@@ -28,7 +28,7 @@
 			<hr />
 
 			<!-- Correlated -->
-			<!-- <div class="row correlated" ng-if="!error" ng-controller="OverviewCorrelatedCtrl" ng-init="getCorrelatedCharts()" ng-include="'views/overview/correlated.html'"></div> -->
+			<div class="row correlated" ng-if="!error" ng-controller="OverviewCorrelatedCtrl" ng-init="getCorrelatedCharts()" ng-include="'views/overview/correlated.html'"></div>
 		</div>
 	</div>
 </div>
