--- a/www-src/app/views/overview/correlated.html
+++ b/www-src/app/views/overview/correlated.html
@@ -9,7 +9,7 @@
 		<span class="chtlabel chtlabel-y1" ng-if="chart.labels.y1">{{chart.labels.y1}}</span>
 		<span class="chtlabel chtlabel-y2" ng-if="chart.labels.y2">{{chart.labels.y2}}</span>
 		<a class="correlated" href="/{{chart.info.url}}">
-			{{chart.title}} <span class="label label-info">{{chart.coeff}}%</span>
+			{{chart.title}} <span class="label" ng-class="{'very low': 'label-danger', 'low': 'label-warning', 'medium': 'label-default', 'high': 'label-info', 'very high': 'label-success'}[chart.strength.toLowerCase()]">{{chart.strength}}</span>
 			<span ng-include="'views/charts/correlated/line.html'"></span>
 			<span ng-include="'views/charts/correlated/column.html'"></span>
 			<span ng-include="'views/charts/correlated/scatter.html'"></span>
