--- a/www-src/app/views/home.html
+++ b/www-src/app/views/home.html
@@ -20,10 +20,10 @@
 				<div class="col-xs-12" ng-if="chartsRelated && chartsRelated.length > 0">
 					<div class="row">
 						<div class="col-xs-12 col-sm-6 col-md-3 text-center" ng-repeat="chart in chartsRelated | limitTo:4" id="{{chart.id}}" ng-show="hasRelatedCharts() > 0">
-							<div class="media-heading">
+							<div class="media-heading chart-title">
 								<h5>
-									<a href="{{chart.url}}" ng-if="!chart.info">{{chart.title}}</a>
-									<a href="{{chart.info.url}}" ng-if="chart.info">{{chart.info.title[0]}} and {{chart.info.title[1]}}</a>
+									<a href="{{chart.url}}" ng-if="!chart.info">{{chart.title | truncate: 50}}</a>
+									<a href="{{chart.info.url}}" ng-if="chart.info">{{chart.info.title[0] + ' and ' + chart.info.title[1] | truncate: 50}}</a>
 								</h5>
 							</div>
 							<span class="chtlabel chtlabel-x" ng-if="chart.labels.x">{{chart.labels.x}}</span>
