--- a/www-src/app/views/overview/correlated.html
+++ b/www-src/app/views/overview/correlated.html
@@ -1,5 +1,7 @@
 <div class="row">
-	<div class="col-md-12"><h4>Correlation between <a href="/overview/{{params.id}}">{{info.title}}</a> and <strong>({{max.correlated}})</strong> other datasets</h4></div>
+	<div class="col-md-12">
+		<h4>Correlation between <a href="/overview/{{params.id}}">{{info.title}}</a> and <strong>({{max.correlated}})</strong> other datasets</h4>
+	</div>
 </div>
 
 <div class="row">
@@ -8,15 +10,17 @@
 		<span class="chtlabel chtlabel-y" ng-if="chart.labels.y">{{chart.labels.y}}</span>
 		<span class="chtlabel chtlabel-y1" ng-if="chart.labels.y1">{{chart.labels.y1}}</span>
 		<span class="chtlabel chtlabel-y2" ng-if="chart.labels.y2">{{chart.labels.y2}}</span>
+
 		<a class="correlated" href="/{{chart.info.url}}">
 			{{chart.title}} <span class="label" ng-class="{'very low': 'label-danger', 'low': 'label-warning', 'medium': 'label-default', 'high': 'label-info', 'very high': 'label-success'}[chart.strength.toLowerCase()]">{{chart.strength}}</span>
 			<span ng-include="'views/charts/correlated/line.html'"></span>
 			<span ng-include="'views/charts/correlated/column.html'"></span>
 			<span ng-include="'views/charts/correlated/scatter.html'"></span>
-			<div class="chartSwitch" ng-if="chart.data.length == 0">
-				<div class="well text-center">Oops! nothing to plot.</div>
-			</div>
 		</a>
+
+		<div class="chartSwitch" ng-if="chart.data.length == 0">
+			<div class="well text-center">Oops! nothing to plot.</div>
+		</div>
 	</div>
 
 	<div class="col-xs-12" ng-if="loading.correlated" ng-include="'views/loader.html'"></div>
