--- a/www-src/app/views/overview/related.html
+++ b/www-src/app/views/overview/related.html
@@ -1,5 +1,7 @@
 <div class="row">
-	<div class="col-md-12"><h4>Correlation within <a href="/overview/{{params.id}}">{{info.title}}</a></h4></div>
+	<div class="col-md-12">
+		<h4>Correlation within <a href="/overview/{{params.id}}">{{info.title}}</a></h4>
+	</div>
 </div>
 
 <div class="row">
@@ -8,8 +10,10 @@
 		<span class="chtlabel chtlabel-y" ng-if="chart.labels.y">{{chart.labels.y}}</span>
 		<span class="chtlabel chtlabel-y1" ng-if="chart.labels.y1">{{chart.labels.y1}}</span>
 		<span class="chtlabel chtlabel-y2" ng-if="chart.labels.y2">{{chart.labels.y2}}</span>
+
 		<a class="related" href="/{{chart.url}}">
 			{{chart.title}}
+
 			<span ng-include="'views/charts/related/line.html'"></span>
 			<span ng-include="'views/charts/related/row.html'"></span>
 			<span ng-include="'views/charts/related/column.html'"></span>
