--- a/www-src/app/views/user/profile.html
+++ b/www-src/app/views/user/profile.html
@@ -82,7 +82,7 @@
 						<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0" ng-repeat="disc in approvedDiscoveries">
 							<div class="circular-icon"><i class="glyphicon glyphicon-flag"></i></div>
 							<p class="profile-li">
-								<a href="/{{disc.apistring}}">{{disc.title}}</a>
+								<a href="/{{disc.apistring}}">{{disc.title | truncate: truncate}}</a>
 							</p>
 						</div>
 					</div>
@@ -104,7 +104,7 @@
 						<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0" ng-repeat="disc in discoveries">
 							<div class="circular-icon"><i class="glyphicon glyphicon-flag"></i></div>
 							<p class="profile-li">
-								<a href="/{{disc.apistring}}">{{disc.title}}</a>
+								<a href="/{{disc.apistring}}">{{disc.title | truncate: truncate}}</a>
 							</p>
 						</div>
 					</div>
@@ -126,8 +126,8 @@
 						<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0" ng-repeat="obsv in observations">
 							<div class="circular-icon"><i class="glyphicon glyphicon-flag"></i></div>
 							<p class="profile-li">
-								<a href="/{{obsv.apistring}}">{{obsv.charttitle}}</a><br/>
-								<span class="text-muted">{{obsv.comment}}</span>
+								<a href="/{{obsv.apistring}}">{{obsv.charttitle | truncate: truncate}}</a><br/>
+								<span class="text-muted">{{obsv.comment | truncate: truncate}}</span>
 							</p>
 						</div>
 					</div>
