--- a/www-src/app/views/charts/info.html
+++ b/www-src/app/views/charts/info.html
@@ -30,11 +30,17 @@
 </div>
 <div class="row ci-row" ng-show="info.source.prim">
 	<div class="col-sm-6 ci-key">Primary datasource</div>
-	<div class="col-sm-6 ci-val">{{info.source.prim}}</div>
+	<div class="col-sm-6 ci-val">
+		<a ng-if="info.source.prim.id" ng-href="/overview/{{info.source.prim.id}}">{{info.source.prim.title}}</a>
+		<span ng-if="!info.source.prim.id">{{info.source.prim.title}}</span>
+	</div>
 </div>
 <div class="row ci-row" ng-show="info.source.seco">
 	<div class="col-sm-6 ci-key">Secondary datasource</div>
-	<div class="col-sm-6 ci-val">{{info.source.seco}}</div>
+	<div class="col-sm-6 ci-val">
+		<a ng-if="info.source.seco.id" ng-href="/overview/{{info.source.seco.id}}">{{info.source.seco.title}}</a>
+		<span ng-if="!info.source.seco.id">{{info.source.seco.title}}</span>
+	</div>
 </div>
 <div class="row ci-row" ng-show="info.strength">
 	<div class="col-sm-6 ci-key">Statistical strength</div>
