--- a/www-src/app/views/charts/info.html
+++ b/www-src/app/views/charts/info.html
@@ -28,14 +28,14 @@
 		<span class="csl" ng-repeat="dsappvr in info.disapprovers"><a href="/profile/{{dsappvr}}">{{dsappvr}}</a></span>
 	</div>
 </div>
-<div class="row ci-row" ng-show="info.source.prim">
+<div class="row ci-row" ng-show="info.source.prim.title">
 	<div class="col-sm-6 ci-key">Primary datasource</div>
 	<div class="col-sm-6 ci-val">
 		<a ng-if="info.source.prim.id" ng-href="/overview/{{info.source.prim.id}}">{{info.source.prim.title}}</a>
 		<span ng-if="!info.source.prim.id">{{info.source.prim.title}}</span>
 	</div>
 </div>
-<div class="row ci-row" ng-show="info.source.seco">
+<div class="row ci-row" ng-show="info.source.seco.title">
 	<div class="col-sm-6 ci-key">Secondary datasource</div>
 	<div class="col-sm-6 ci-val">
 		<a ng-if="info.source.seco.id" ng-href="/overview/{{info.source.seco.id}}">{{info.source.seco.title}}</a>
