--- a/www-src/app/views/admin/observations.html
+++ b/www-src/app/views/admin/observations.html
@@ -42,7 +42,7 @@
 		<tr ng-if="loading && observations.length === 0"><td colspan="7" ng-include="'../views/loader.html'"></td></tr>
 		<tr ng-if="!loading && observations.length === 0">
 			<td colspan="7">
-				<div class="alert alert-danger">Sorry no Observation found!</div>
+				<div class="alert alert-warning">Sorry no Observation found!</div>
 			</td>
 		</tr>
 		<tr ng-repeat="observation in observations | limitTo: pagination.perPage">
